# BirdGame

./: CMakeLists.txt  README.md  config.json  highscores.txt  main.cpp
include/: Background.h  Bird.h  Game.h  GameConfig.h  Ground.h  HighScoreManager.h  InputHandler.h  Pipe.h  State.h
src/: Background.cpp  Bird.cpp  Game.cpp  GameConfig.cpp  Ground.cpp  HighScoreManager.cpp  InputHandler.cpp  Pipe.cpp  State.cpp
